<resources>
    <string name="app_name">Database Demo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="last_name_et">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="add_a_new_birthday">Add a new Birthday</string>
    <string name="delete_all_birthdays">Delete All Birthdays</string>
    <string name="show_all_birthdays">Show All Birthdays</string>
</resources>
