<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moore.databasedemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastname"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastNameET"
            android:textAlignment="center"
            android:hint="@string/last_name_et"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:singleLine="true">
            <requestFocus/>
        </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_birthday"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/birthdayET"
            android:textAlignment="center"
            android:hint="@string/birthday"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="date"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addButton"
            android:text="@string/add_a_new_birthday"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="addClick"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:text="@string/delete_all_birthdays"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="deleteClick"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/showButton"
            android:text="@string/show_all_birthdays"
            android:layout_marginTop="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="showClick"
            android:textColor="#ffffff"/>


</LinearLayout>
</ScrollView>
